# bilibili_music

./: .gitignore  Cargo.toml  typos.toml
.github/workflows/: typos.yaml
src/: config.rs  main.rs
src/api/: args.rs  dto.rs  login.rs  login_req.rs  login_res.rs  mod.rs
tests/: api_test.rs
