[package]
name = "bilibili_music"
version = "0.1.0"
authors = ["jackpot <wikileaks928@gmail.com>"]
edition = "2021"

[dependencies]
base64 = "0.22.1"
digest = { version = "0.10.7", features = ["alloc"] }
md-5 = "0.10.6"
rand = "0.8.5"
rsa = "0.9.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
test-context = "0.3.0"
ureq = { version = "2.10.1", features = ["json"] }
